Fix on the drawer covering up bottom of the map

--- a/client/src/components/pages/Map/Map.css
+++ b/client/src/components/pages/Map/Map.css
@@ -2,7 +2,7 @@
   position:absolute;
   top:0;
   left:0;
-  bottom:0;
+  bottom:56px;
   right:0;
   z-index:0;
 }
